# langfair

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.basedpyright/: baseline.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml
data/: DATA_COPYRIGHT.md  neil_code_dialogsum_train.txt
examples/evaluations/classification/: classification_metrics_demo.ipynb
examples/evaluations/recommendation/: recommendation_metrics_demo.ipynb
examples/evaluations/text_generation/: auto_eval_demo.ipynb  counterfactual_metrics_demo.ipynb  stereotype_metrics_demo.ipynb  toxicity_metrics_demo.ipynb
examples/generators/: response_generator_demo.ipynb
langfair/: __init__.py
langfair/auto/: __init__.py  auto.py
langfair/constants/: cost_data.py  word_lists.py
langfair/generator/: __init__.py  counterfactual.py  generator.py
langfair/metrics/classification/: __init__.py  classification.py
langfair/metrics/classification/metrics/: __init__.py  false_discovery.py  false_negative.py  false_omission.py  false_positive.py  predicted_prevalence.py
langfair/metrics/classification/metrics/baseclass/: __init__.py  metrics.py
langfair/metrics/counterfactual/: __init__.py  counterfactual.py
langfair/metrics/counterfactual/metrics/: __init__.py  bleu.py  cosine.py  rougel.py  sentimentbias.py
langfair/metrics/counterfactual/metrics/baseclass/: __init__.py  metrics.py
langfair/metrics/recommendation/: __init__.py  recommendation.py
langfair/metrics/recommendation/metrics/: __init__.py  jaccard.py  prag.py  serp.py
langfair/metrics/recommendation/metrics/baseclass/: __init__.py  metrics.py
langfair/metrics/stereotype/: __init__.py  stereotype.py
langfair/metrics/stereotype/metrics/: __init__.py  associations.py  classifier.py  cooccurrence.py
langfair/metrics/stereotype/metrics/baseclass/: __init__.py  metrics.py
langfair/metrics/toxicity/: __init__.py  toxicity.py
langfair/metrics/utils/classifier_metrics/: __init__.py  expectedmaximum.py  fraction.py  probability.py
langfair/metrics/utils/classifier_metrics/baseclass/: __init__.py  metrics.py
langfair/utils/: __init__.py  dataloader.py  dataset_loader.py
tests/: test_autoeval.py  test_classification.py  test_counterfactual_metrics.py  test_counterfactualgenerator.py  test_langfair312.py  test_recommendation_metrics.py  test_responsegenerator.py  test_stereotype_metrics.py  test_toxicity_metrics.py
tests/data/autoeval/: autoeval_results_file.json  generate_autoeval_data.ipynb
tests/data/counterfactual/: counterfactual_data_file.json  counterfactual_results_file.json  generate_counterfactual_data.ipynb
tests/data/recommendation/: generate_recommendation_data.ipynb  recommendation_dict_file.csv  recommendation_results_against_neutral.json  recommendation_results_pairwise.json
tests/data/stereotype/: generate_stereotype_data.ipynb  stereotype_data_file.json  stereotype_results_file.json
tests/data/toxicity/: generate_toxicity_data.ipynb  toxic_responses.csv  toxic_results_detoxify_multilingual.json  toxic_results_detoxify_original.json  toxic_results_detoxify_unbiased.json  toxic_results_roberta-hate-speech-dynabench-r4-target.json  toxic_results_toxigen.json
