[tool.poetry]
name = "langfair"
version = "0.4.0"
description = "LangFair is a Python library for conducting use-case level LLM bias and fairness assessments"
readme = "README.md"
authors = ["Dylan Bouchard <dylan.bouchard@cvshealth.com>",
           "Mohit Singh Chauhan <mohitsingh.chauhan@cvshealth.com>"]
maintainers = ["Dylan Bouchard <dylan.bouchard@cvshealth.com>", 
               "Mohit Singh Chauhan <mohitsingh.chauhan@cvshealth.com>",
               "David Skarbrevik <david.skarbrevik@cvshealth.com>",
               "Viren Bajaj <bajajv@aetna.com>",
               "Zeya Ahmad <zeya.ahmad@cvshealth.com>"]
repository = "https://github.com/cvs-health/langfair"
homepage = "https://github.com/cvs-health/langfair"
documentation = "https://cvs-health.github.io/langfair/latest/index.html"
license = "Apache-2.0 AND MIT"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "langfair" },
    { include = "langfair/metrics" },
    { include = "langfair/generator" },
    { include = "langfair/utils"},
]
exclude = ["docs", "docs_src"] # never include documentation in build
keywords = ["LLM", "large language model", "bias", "fairness", "Responsible AI"]  # Add your keywords here

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.26.4"
vadersentiment = "^3.3.2"
evaluate = "^0.4.1"
nltk = ">=3.8.2"
sacremoses = "^0.1.1"
rouge-score = "^0.1.2"
detoxify = "^0.5.2"
langchain = "^0.3.7"
asyncio = "^3.4.3"
sentence-transformers = "^2.7.0"
typing = "<3.10"
tiktoken = "^0.7.0"
transformers = ">=4.48.0"

[tool.poetry.group.dev.dependencies]
langchain-openai = "^0.2.9"
pre-commit = "3.7.1"
ruff = "^0.4.8"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
python-dotenv = "^1.0.1"

[tool.poetry.group.docs.dependencies]
sphinx = "7.3.7"
pydata_sphinx_theme = "0.16.1"
sphinxcontrib-bibtex = "2.6.3"
sphinx-autodoc-typehints = "2.2.0"
sphinx-gallery = "0.18.0"

[tool.poetry.group.extra_llms.dependencies]
langchain-mistralai = "^0.2.2"
langchain-google-vertexai = "^2.0.13"

[tool.ruff.lint]
extend-select = ["I"] # lets Ruff catch and fix unsorted imports
ignore = ["E712"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
